--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=photo_studio # nombre de tu BD
+DB_DATABASE=photos 
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -41,10 +41,10 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-JWT_SECRET=da2mNnpFsgwQdXjj8vxSTJknmKtQXoEO
+JWT_SECRET=zzKkudtESBVhmQa9IzDvt1y4fubJlY7S
 
-URL_API_SUBASTA=http://localhost/photomanager-api/api/
-URL_API_CENTRAL="${STORAGE_URL}"
+URL_API=http://localhost/photomanager-api/api/
+URL_API_STORAGE="${STORAGE_URL}"
 
 LARAVEL_WEBSOCKETS_SSL_LOCAL_CERT=C:\xampp\apache\cert\autosubasta\server.crt
 LARAVEL_WEBSOCKETS_SSL_LOCAL_PK=C:\xampp\apache\cert\autosubasta\server.key
