--- a/package.json
+++ b/package.json
@@ -1,41 +1,56 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "node node_modules/.bin/cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "node node_modules/.bin/cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "node node_modules/.bin/cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "axios": "^0.18",
-        "bootstrap": "^4.0.0",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.5",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.11"
-    },
-    "dependencies": {
-        "element-ui": "^2.13.0",
-        "laravel-echo": "^1.6.1",
-        "pusher-js": "^5.0.3",
-        "register-service-worker": "^1.6.2",
-        "vue-axios": "^2.1.5",
-        "vue-currency-input": "^1.16.0",
-        "vue-i18n": "^8.15.1",
-        "vue-infinite-loading": "^2.4.4",
-        "vue-router": "^3.1.3",
-        "vue-router-prefetch": "^1.6.0",
-        "vue2-transitions": "^0.3.0",
-        "vuetify": "^2.1.14",
-        "vuex": "^3.1.2"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap-vue": "^2.21.2",
+    "chart.js": "^2.9.3",
+    "core-js": "^3.9.1",
+    "dayspan-vuetify": "^0.4.0",
+    "element-ui": "^2.15.1",
+    "laravel-echo": "^1.10.0",
+    "laravel-mix": "^4.0.7",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "popper.js": "^1.16.1",
+    "pusher-js": "^5.1.1",
+    "register-service-worker": "^1.7.1",
+    "resolve-url-loader": "^2.3.1",
+    "vee-validate": "^3.4.5",
+    "vue": "^2.6.12",
+    "vue-axios": "^2.1.5",
+    "vue-chartjs": "^3.5.0",
+    "vue-ctk-date-time-picker": "^2.5.0",
+    "vue-full-calendar": "^2.8.1-0",
+    "vue-i18n": "^8.18.2",
+    "vue-infinite-loading": "^2.4.5",
+    "vue-router": "^3.3.4",
+    "vue-router-prefetch": "^1.6.2",
+    "vue2-transitions": "^0.3.0",
+    "vuetify": "^2.4.8",
+    "vuex": "^3.6.2"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-plugin-pwa": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^7.1.0",
+    "vue-cli-plugin-i18n": "^1.0.1",
+    "vue-template-compiler": "^2.6.12"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 11"
+  ]
 }
